Date Picker Corrections

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="DatePickerStyle" parent="android:Widget.Material.DatePicker">
-        <item name="android:datePickerMode">calendar</item>
+    <style name="DatePickerStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:colorAccent">@color/primary_color</item>
-        <item name="android:colorControlHighlight">@color/on_primary_color</item>
-        <item name="android:colorControlNormal">@color/on_surface</item>
+        <item name="android:colorActivatedHighlight">@color/primary_color</item>
+        <item name="colorControlActivated">@color/primary_color</item>
 
     </style>
 </resources>
